--- a/Violapp/build.gradle
+++ b/Violapp/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.31"
+    ext.hilt_version = '2.33-beta'
     repositories {
         google()
         jcenter()
@@ -13,6 +14,7 @@ buildscript {
         // in the individual module build.gradle files
         def nav_version = "2.3.4"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
