--- a/Violapp/app/src/main/AndroidManifest.xml
+++ b/Violapp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.ntikhoa.violapp">
 
     <application
-        android:name=".MyApplication"
+        android:name=".di.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
